<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EducationActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/educational"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/schoolInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/schoolName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/schoolEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/schoolInputLayout"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/locate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yearAttendInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/locationInputLayout"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/yearAttend">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/yearAttendEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/degreeInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/yearAttendInputLayout"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/degreeRec">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/degreeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/majorInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/degreeInputLayout"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/majorIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/majorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!--    Another School-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/another"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/typeAnother"
        app:layout_constraintTop_toBottomOf="@+id/majorInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="8dp"/>

    <!--    Back to home-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bckButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/toHome"
        app:layout_constraintTop_toBottomOf="@+id/another"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>